@@ -1,6 +1,8 @@
 module Searchgasm
   module Condition
     class NotBlank < Base
+      self.value_type = :boolean
+      
       class << self
         def condition_names_for_column
           super + ["is_not_blank"]
